<resources>
    <string name="app_name">MobE_BMP</string>

    <!-- Menu -->
    <string name="menu_ma_fac">
        <font size="18" color="#3A01DF">Ma Fac</font>
    </string>
    <string name="menu_mes_cours">
        <font size="18" color="#3A01DF">Mes Cours</font>
    </string>
    <string name="menu_configuration">
        <font size="18" color="#3A01DF">Configuration</font>
    </string>
    <string name="menu_geoloc">Geolocalisation</string>
    <string name="menu_anomalies">Détection d\'anomalies</string>
    <string name="menu_emploi_du_temps">Emploi du temps</string>
    <string name="menu_informations_fac">Informations</string>
    <string name="menu_informations_personnelles">QR Code</string>
    <string name="menu_point_interet">Points d\'intérêts</string>
    <string name="menu_infos">infos</string>
    <!-- Configurations -->
    <string name="config_title">Configurations</string>
    <string name="config_edt_title">Emploi du temps</string>
    <string name="config_edt_summary">Paramètres de l\'emploi du temps</string>
    <string name="config_urlEdt_key">urlEdt</string>
    <string name="config_urlEdt_title">Url de l\'emploi du temps</string>
    <string name="config_urlEdt_summary">l\'URL de votre emploi du temps : </string>
    <string name="config_urlEdt_dialogBox_title">Entrez l\'URL de votre emploi du temps</string>
    <string name="config_urlEdt_value">https://edt.univ-tlse3.fr/FSI/2017_2018/M2/M2_INF_DL/g251747.xml</string>
    <string name="config_validation">OK</string>
    <string name="test_print">Hello, this is a text to test print</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="luminosity">Luminosity</string>
    <string name="mes_information">Infos</string>
    <string name="names">Prince MAZABA Montasser B.HAMMICH Franck PICARDAT</string>


    <!--  DeviceListActivity -->
    <string name="scanning">Scanner les appareils...</string>
    <string name="select_device">Selectionner un appareil pour le connecter</string>
    <string name="none_paired">Aucun appreil detecté</string>
    <string name="none_found">Aucun appareil trouvé</string>
    <string name="title_paired_devices">Appareils detectés</string>
    <string name="title_other_devices">Autre appareils valides</string>
    <string name="button_scan">Analyser</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
